[WIP] fix pointer interaction with modal and overlay z-index.

--- a/backend/backend/static/scss/_cve.scss
+++ b/backend/backend/static/scss/_cve.scss
@@ -299,8 +299,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  cursor: pointer;
+  z-index: 990;
 }
 
 
